2002-12-29  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/main.c (sp_do_export_png): Initialize y0

	* src/file.c (sp_export_png_file): Use pixelstore, export min 64 rows at once,
	fix miscalculated rowstride

2002-12-28  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/nr-type-directory.c (nr_type_read_w32_list): Use
	windows native fonts, if applicable

	* src/libnrtype/nr-type-w32.h: New file

	* src/libnrtype/nr-type-w32.c: New file

2002-12-27  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/print.c (sp_print_image_R8G8B8A8_N): Implement direct PS version

2002-12-26  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/print.c (sp_print_bpath): Helper
	(sp_print_bind): Implement non-gnome-print version
	(sp_print_release): Ditto
	(sp_print_fill): Ditto
	(sp_print_stroke): Implement non-gnome-print version

	* src/widgets/icon.c (sp_icon_image_load): Generic image loader

	* src/desktop.c (sp_desktop_widget_update_zoom): Make working again

	* src/widgets/button.c: New file

	* src/widgets/button.h: New file

	* src/toolbox.c (sp_toolbox_draw_create): Port to brand new SPButton

2002-12-17  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/desktop.c (sp_desktop_widget_init): Some cleanup

	* src/widgets/ruler.c: Moved to widgets subdir

	* src/widgets/ruler.h: Moved to widgets subdir

2002-12-16  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in: --with[out]-gnome-print argument, thanks to MentaLguY

2002-12-15  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-guide.c (sp_guide_set): Fixed horiz/vert

	* src/desktop-events.c (sp_dt_ruler_event): Fixed
	(sp_dt_guide_event): Fixed

	* src/helper/guideline.h: Renamed to avoid conflict with SPGuide object,
	several signature changes

	* src/helper/guideline.c: Ditto, removed properties

	* src/helper/sp-canvas.c (sp_canvas_window_to_world): Oops, was meant to be y0
	(sp_canvas_world_to_window): Ditto

2002-12-14  Lauris Kaplinski  <lauris@kaplinski.com>
